--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,3 +43,22 @@ section#telefone{
     width: 269px;
     height: 471px;
 }
+
+#redes-sociais {
+    text-align: right;
+}
+
+#redes-sociais img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px black;
+    box-sizing: border-box;
+}
+
+#redes-sociais img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.545);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px black;
+    transition: transform .3s, border .2s;
+}
